--- a/src/app/views/views.component.html
+++ b/src/app/views/views.component.html
@@ -10,7 +10,7 @@
                 </a>
             </li>
             <li class="nav-item mb-1">
-                <a routerLinkActive="active" routerLink="tasks/all-tasks">
+                <a routerLinkActive="active" routerLink="movies/all-movies">
                     <i class="fa fa-film"></i>
                     Movies
                 </a>
@@ -33,6 +33,7 @@
                 <div class="col">
                     <router-outlet></router-outlet>
                 </div>
+            </div>
         </div>
     </div>
 </div>
