--- a/src/app/views/movies/components/movie-details/movie-details.component.html
+++ b/src/app/views/movies/components/movie-details/movie-details.component.html
@@ -1,1 +1,37 @@
-<p>movie-details works!</p>
+<div class="container-fluid">
+    <div class="header">
+        <h1>{{movieDetails?.title + ' details'}}</h1>
+    </div>
+    <div class="movie-details">
+        <ng-container *ngIf="movieDetails.title">
+            <div>
+                <label for="title"><b>Title:</b></label>
+                <p>{{movieDetails?.title}}</p>
+            </div>
+        </ng-container>
+        <ng-container *ngIf="movieDetails.director">
+            <div>
+                <label for="director"><b>Director: </b></label>
+                <p>{{movieDetails?.director}}</p>
+            </div>
+        </ng-container>
+        <ng-container *ngIf="movieDetails.category">
+            <div>
+                <label for="category"><b>Category: </b></label>
+                <p>{{movieDetails?.category}}</p>
+            </div>
+        </ng-container>
+        <ng-container *ngIf="movieDetails.releaseDate">
+            <div>
+                <label for="releaseDate"><b>Release Date: </b></label>
+                <p>{{movieDetails?.releaseDate}}</p>
+            </div>
+        </ng-container>
+        <ng-container *ngIf="movieDetails.shortSynopsis">
+            <div>
+                <label for="shortSynopsis"><b>Short Synopsis: </b></label>
+                <p>{{movieDetails?.shortSynopsis}}</p>
+            </div>
+        </ng-container>
+    </div>
+</div>
