update Views Module

--- a/src/app/views/categories/category-details/category-details.component.html
+++ b/src/app/views/categories/category-details/category-details.component.html
@@ -1,1 +1,13 @@
-<p>category-details works!</p>
+<div class="container-fluid">
+    <div class="header">
+        <h1>{{categoryDetails ?.title + ' details'}}</h1>
+    </div>
+    <div class="movie-details">
+        <ng-container *ngIf="categoryDetails.title">
+            <div>
+                <label for="title"><b>Title:</b></label>
+                <p>{{categoryDetails?.title}}</p>
+            </div>
+        </ng-container>
+    </div>
+</div>
