--- a/src/app/views/categories/edit-category/edit-category.component.css
+++ b/src/app/views/categories/edit-category/edit-category.component.css
@@ -19,8 +19,8 @@
   }
   
   .btn-primary {
-    background-color: #198754;
-    border-color: #198754;
+    background-color: #0d6efd;
+    border-color: #0d6efd;
     color: white;
     padding: 10px 15px;
     border-radius: 5px;
