--- a/src/app/views/movies/components/all-movies/all-movies.component.html
+++ b/src/app/views/movies/components/all-movies/all-movies.component.html
@@ -26,9 +26,9 @@
           <td>
             {{item?.releaseDate}}
           </td>
-          <td>
+          <td *ngIf="item.shortSynopsis">
             {{item?.shortSynopsis}}
-          </td>
+        </td>
         
           
           <td class="text-right">
