--- a/src/app/views/movies/components/create-movie/create-movie.component.css
+++ b/src/app/views/movies/components/create-movie/create-movie.component.css
@@ -19,8 +19,8 @@
   }
   
   .btn-primary {
-    background-color: #198754;
-    border-color: #198754;
+    background-color: #0d6efd;
+    border-color: #0d6efd;
     color: white;
     padding: 10px 15px;
     border-radius: 5px;
@@ -30,6 +30,12 @@
   
   .btn-primary:disabled {
     background-color: #ccc;
+    border-color: #ccc;
+  }
+
+  .text-area{
+    width: 100%!important;
+    border-radius: 10px;
     border-color: #ccc;
   }
   
