--- a/src/app/views/movies/components/create-movie/create-movie.component.html
+++ b/src/app/views/movies/components/create-movie/create-movie.component.html
@@ -37,8 +37,8 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="shortSynopsis">Short Synopsus:</label>
-            <input type="text" id="shortSynopsis" formControlName="shortSynopsis" required>
+            <label for="shortSynopsis">Short Synopsis:</label>
+            <textarea id="shortSynopsis" class="text-area" formControlName="shortSynopsis" rows="3" required></textarea>
             <div *ngIf="createMovieForm.get('shortSynopsis').touched && createMovieForm.get('shortSynopsis').errors">
                 <small class="text-danger" *ngIf="createMovieForm.get('shortSynopsis').errors['required']">
                     Date is required.
